@@ -14,6 +14,7 @@
 					doublePlot = TRUE,
 					strip.left = TRUE,
 					scale = 2,
+					xaxt = TRUE,
 					xlab = "Hours", 
 					ylab = "Activity", ...)
 }
@@ -30,6 +31,7 @@
      \item{doublePlot}{a logical vector, default to \code{TRUE}}
      \item{strip.left}{a logical vector, if \code{TRUE}, default, draw  strips to the left of each panel}
      \item{scale}{a numeric vector of length 1 allowing for downscaling of activity spikes}
+     \item{xaxt}{a logical value indicating whether x-axis should be drawn on the plot}
      \item{xlab}{character string giving label name for the x-axis}
      \item{ylab}{character string giving label name for the y-axis}
      \item{...}{further arguments to be passed to \code{\link{xyplot}}}
