@@ -3,7 +3,13 @@
 	* previously the date on the left strip corresponded to data in the right hand panel, now to the left hand panel
 	* added some lines that can be uncommented to change colours of data, left strip and legend
 
-2010-Nov-08 12:48:33 Mihai Valcu
+
+
+2011-May-19 20:19:33 Mihai Valcu
+	* DESCRIPTION (Date, Version): 0.0-3.22
+	* xaxt added to actogram()
+	  
+	2010-Nov-08 12:48:33 Mihai Valcu
 	* DESCRIPTION (Date, Version): 0.0-3.2
 	* new function: actlocator.R, locates points on a given actogram. It still needs to be documented. 
 	  A stop should be added if o object is not an actogram
